# seekCpp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
.trae/rules/: code-refactor-optimize.md  code-security-audit.md  cpp-high-performance.md  production-code-baseline.md
.trae/skills/cpp-architecture/: SKILL.md
.trae/skills/cpp-basics-trainer/: SKILL.md
.trae/skills/cpp-code-reviewer/: SKILL.md
.trae/skills/cpp-concurrency/: SKILL.md
.trae/skills/cpp-diagnostic-assessor/: SKILL.md
.trae/skills/cpp-expert-level/: SKILL.md
.trae/skills/cpp-memory-raii/: SKILL.md
.trae/skills/cpp-modern-features/: SKILL.md
.trae/skills/cpp-network-programming/: SKILL.md
.trae/skills/cpp-performance/: SKILL.md
.trae/skills/cpp-stl-master/: SKILL.md
.trae/skills/cpp-system-engineering/: SKILL.md
.trae/skills/cpp-template-meta/: SKILL.md
build-release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-release/libs/: cmake_install.cmake
build-release/libs/module1/: cmake_install.cmake
build-release/source/: cmake_install.cmake
build-release/source/apps/: cmake_install.cmake
build-release/source/apps/todo_list/: cmake_install.cmake
docs/: DAILY_PLAN.md  DIAGNOSIS_REPORT.md  ERROR_LOG_TEMPLATE.md  KNOWLEDGE_CARD_TEMPLATE.md  LEARNING_PATHS.md  MASTER_GUIDE.md  PROMPT_LIBRARY.md  WEEKLY_PLAN.md  WEEKLY_REVIEW_TEMPLATE.md
include/: comm_def.h
libs/: CMakeLists.txt
libs/module1/: CMakeLists.txt
libs/module1/include/: md1.h  module1.h
libs/module1/source/: md1.cpp  module1.cpp
libs/network/: CMakeLists.txt  README.md
libs/network/examples/: CMakeLists.txt  client_example.cpp  server_example.cpp
libs/network/include/: client_connection.h  server.h  server_impl.h  server_impl_linux.h  socket.h  socket_factory.h  socket_impl.h  socket_impl_linux.h
libs/network/src/: client_connection.cpp  server.cpp  server_impl.cpp  server_impl_linux.cpp  socket.cpp  socket_factory.cpp  socket_impl.cpp  socket_impl_linux.cpp
source/: CMakeLists.txt
source/apps/: CMakeLists.txt
source/apps/app1/: CMakeLists.txt
source/apps/app1/include/: app1.h
source/apps/app1/source/: app1.cpp  main.cpp
source/apps/todo_list/: CMakeLists.txt
source/apps/todo_list/include/: data_def.h  io_helper.h  login.h  store_helper.h  todo_list.h  user_login.h
source/apps/todo_list/source/: io_hekper.cpp  login.cpp  main.cpp  store_helper.cpp  todo_list.cpp  user_login.cpp
source/apps/todo_manager/: CMakeLists.txt  README.md
source/apps/todo_manager/client/: CMakeLists.txt
source/apps/todo_manager/client/include/: client.h  socket.h
source/apps/todo_manager/client/src/: client.cpp  main.cpp  socket.cpp
source/apps/todo_manager/common/: CMakeLists.txt
source/apps/todo_manager/common/include/: message.h  network_utils.h  task.h  user.h
source/apps/todo_manager/common/src/: message.cpp  network_utils.cpp
source/apps/todo_manager/server/: CMakeLists.txt
source/apps/todo_manager/server/include/: database.h  server.h
source/apps/todo_manager/server/src/: database.cpp  main.cpp  server.cpp
training/: CMakeLists.txt
training/week01_control_flow/: CMakeLists.txt
training/week01_functions/: CMakeLists.txt
training/week01_variables/: CMakeLists.txt
training/week02_arrays/: CMakeLists.txt
training/week02_pointers/: CMakeLists.txt
training/week02_references/: CMakeLists.txt
